2005-01-03  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/darwin-weakimport-1.c: Remove check for variables
	producing warning.
	* gcc.dg/darwin-weakimport-2.c: New.

2005-01-03  Richard Henderson  <rth@redhat.com>

	* g++.old-deja/g++.ext/attrib5.C: Move the alias after the referent.

2005-01-03  Richard Henderson  <rth@redhat.com>

	* gcc.dg/vect/vect.exp: Enable for ia64.
	* lib/target-supports.exp (check_effective_target_vect_int): Likewise.
	(check_effective_target_vect_float): Likewise.
	(check_effective_target_vect_no_align): Likewise.
	* gcc.dg/vect/vect-30.c: XFAIL for vect_no_align.
	* gcc.dg/vect/vect-8.c: Likewise.

2005-01-03  Uros Bizjak <uros@kss-loka.si>

	PR target/19235
	* gcc.dg/pr19236-1.c: New test case.

2005-01-03  Hans-Peter Nilsson  <hp@bitrange.com>

	PR rtl-optimization/12092
	* gcc.dg/pr12092-1.c: Fix typo in dg directive.

2005-01-02  Andreas Jaeger  <aj@suse.de>

	* gcc.dg/pr12092-1.c: Do not run on x86_64.

2005-01-01  Roger Sayle  <roger@eyesopen.com>
	    Andrew Pinski  <pinskia@physics.uc.edu>

	PR rtl-optimization/12092
	* gcc.dg/pr12092-1.c: New test case.

2005-01-01  Geoffrey Keating  <geoffk@geoffk.org>

	* g++.dg/ext/visibility/fvisibility-override1.C: Test using
	'hidden' and 'default' for better portability.
	* g++.dg/ext/visibility/fvisibility-override2.C: Likewise.

	* g++.old-deja/g++.abi/cxa_vec.C: Add -flat_namespace on Darwin
	6 and 7.
	* g++.old-deja/g++.brendan/new3.C: Likewise.

2005-01-01  Steven Bosscher  <stevenb@suse.de>

	* gcc.dg/20041231-1.C: New test.
	* g++.dg/warn/Wunreachable-code-1.C: New test.

2004-12-30  David Edelsohn  <edelsohn@gnu.org>

	* gfortran.fortran-torture/execute/read_eof.f90: Open scratch
	file, not /dev/null.  Abort on error.

2004-12-30  Alexander Malmberg  <alexander@malmberg.org>
	    Ziemowit Laski  <zlaski@apple.com>

        PR objc/18971
	* objc.dg/encode-5.m: New test.

2004-12-29  Richard Henderson  <rth@redhat.com>

	* gcc.dg/20040813-1.c: Disable for alpha and ia64.